[gd_scene load_steps=46 format=2]

[ext_resource path="res://Scenes/Globals/Popup_tecla_E.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/Inteli/Inteli.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menus/PauseMenu/PauseMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Characters/Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/IdleLucas.png" type="Texture" id=5]
[ext_resource path="res://Assets/janela.png" type="Texture" id=6]
[ext_resource path="res://Assets/Mesa Recepção.png" type="Texture" id=7]
[ext_resource path="res://Assets/Idle.png" type="Texture" id=9]
[ext_resource path="res://Assets/Floor 1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Parede_laranja.png" type="Texture" id=11]
[ext_resource path="res://Assets/Wall 3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Pc Recepção.png" type="Texture" id=13]
[ext_resource path="res://Assets/mapa.png" type="Texture" id=14]
[ext_resource path="res://Assets/Porta.png" type="Texture" id=15]
[ext_resource path="res://Assets/TVAnimação/TVTESTE1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Trava Porta.png" type="Texture" id=19]
[ext_resource path="res://Assets/TVAnimação/TVTESTE2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Wall 4 Light.png" type="Texture" id=22]
[ext_resource path="res://Assets/TVAnimação/TVTESTE3.png" type="Texture" id=25]
[ext_resource path="res://Assets/Janela recepção.jpeg" type="Texture" id=29]
[ext_resource path="res://Assets/cacto resized.png" type="Texture" id=30]
[ext_resource path="res://Assets/mesarecepcaooo.png" type="Texture" id=31]
[ext_resource path="res://Assets/elevador para o jogo.jpeg" type="Texture" id=33]
[ext_resource path="res://Assets/Sofá_recepcao_1_resized.png" type="Texture" id=34]
[ext_resource path="res://Assets/mesa-recepçãoo.png" type="Texture" id=35]
[ext_resource path="res://Assets/Floor 4.png" type="Texture" id=36]
[ext_resource path="res://Assets/mesarecp.png" type="Texture" id=37]
[ext_resource path="res://Assets/main Wall.png" type="Texture" id=38]
[ext_resource path="res://Assets/Door_new.png" type="Texture" id=39]

[sub_resource type="TileSet" id=1]
0/name = "Parede_laranja.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -2, -2, 68, 69 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "Floor 4.png 0"
0/texture = ExtResource( 36 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
2/name = "main Wall.png 2"
2/texture = ExtResource( 38 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "elevador para o jogo.jpeg 3"
3/texture = ExtResource( 33 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Janela recepção.jpeg 4"
4/texture = ExtResource( 29 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 128, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = -1
5/name = "Janela recepção.jpeg 5"
5/texture = ExtResource( 29 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = -1
6/name = "mesa-recepçãoo.png 6"
6/texture = ExtResource( 35 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 128, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 1
7/name = "mesarecp.png 7"
7/texture = ExtResource( 37 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 128, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "mesarecepcaooo.png 8"
8/texture = ExtResource( 31 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 128, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "cacto resized.png 9"
9/texture = ExtResource( 30 )
9/tex_offset = Vector2( 2.5, 5 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Sofá_recepcao_1_resized.png 10"
10/texture = ExtResource( 34 )
10/tex_offset = Vector2( 0, 5 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Sofá_recepcao_1_resized.png 11"
11/texture = ExtResource( 34 )
11/tex_offset = Vector2( 0, 5 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Door_new.png 12"
12/texture = ExtResource( 39 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 32, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "door_outside_resized.png 13"
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 64, 128 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Double_door_outside.png 14"
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 128, 128 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "Floor 1.png 15"
15/texture = ExtResource( 10 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 64, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "Wall 4 Light.png 16"
16/texture = ExtResource( 22 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 0, 128, 128 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0
17/name = "Wall 3.png 17"
17/texture = ExtResource( 12 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 0, 0, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = 0
18/name = "Parede_laranja.png 18"
18/texture = ExtResource( 11 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 0, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "main Wall.png 0"
0/texture = ExtResource( 38 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Wall 3.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Parede_laranja.png 2"
2/texture = ExtResource( 11 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="Animation" id=4]
resource_name = "Parado"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 93, 53.75 )

[sub_resource type="SegmentShape2D" id=7]
b = Vector2( 1, 656 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 639.125, 15.625 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0 )

[node name="TileMap_Ground_Floor" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 18, 0, 10, 18, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 18, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 18, 0, 65555, 18, 0, 131072, 18, 0, 131073, 18, 0, 131074, 18, 0, 131075, 18, 0, 131076, 18, 0, 131077, 18, 0, 131078, 11, 0, 131079, 10, 0, 131080, 9, 0, 131081, 18, 0, 131082, 18, 0, 131083, 18, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 196608, 15, 0, 196609, 15, 0, 196610, 15, 0, 196611, 15, 0, 196612, 15, 0, 196613, 15, 0, 196614, 15, 0, 196615, 15, 0, 196616, 15, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196626, 18, 0, 196627, 18, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 9, 0, 262156, 11, 0, 262157, 10, 0, 262162, 18, 0, 262163, 18, 0, 327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 15, 0, 327692, 15, 0, 327693, 15, 0, 327694, 15, 0, 327695, 15, 0, 327696, 15, 0, 327697, 15, 0, 327698, 15, 0, 327699, 15, 0, 393216, 18, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 18, 0, 393233, 18, 0, 393234, 18, 0, 393235, 18, 0, 458752, 18, 0, 458753, 14, 0, 458755, 18, 0, 458756, 18, 0, 458757, 18, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 458769, 18, 0, 458770, 18, 0, 458771, 18, 0, 524291, 18, 0, 524296, 18, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524304, 3, 0, 524306, 18, 0, 524307, 18, 0, 589828, 9, 0, 589829, 11, 0, 589830, 10, 0, 589831, 9, 0, 589832, 11, 0, 589833, 10, 0, 589834, 9, 0, 655360, 15, 0, 655361, 15, 0, 655362, 15, 0, 655363, 15, 0, 655364, 15, 0, 655365, 15, 0, 655366, 15, 0, 655367, 15, 0, 655368, 15, 0, 655369, 15, 0, 655370, 15, 0, 655371, 15, 0, 655372, 15, 0, 655373, 15, 0, 655374, 15, 0, 655375, 15, 0, 655376, 15, 0, 655377, 15, 0, 655378, 15, 0, 655379, 15, 0 )

[node name="TileMap2" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 3 )
format = 1
tile_data = PoolIntArray( 458753, 2, 0, 458754, 2, 0, 458762, 2, 0, 458763, 2, 0, 524289, 2, 0, 524290, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 1, 0, 589828, 0, 0 )

[node name="Area_Recepcionista" type="Area2D" parent="."]
position = Vector2( 917, 583 )

[node name="Idle" type="Sprite" parent="Area_Recepcionista"]
position = Vector2( -15.9999, -9.99994 )
scale = Vector2( 2.44791, 2.90625 )
texture = ExtResource( 9 )
flip_h = true
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Area_Recepcionista/Idle"]
autoplay = "Parado"
anims/Parado = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Recepcionista"]
position = Vector2( -37, -0.25 )
shape = SubResource( 6 )

[node name="Popup_tecla_E" parent="Area_Recepcionista" instance=ExtResource( 1 )]
visible = true
margin_left = -35.0
margin_top = -78.0
margin_right = 0.0
margin_bottom = -60.0

[node name="Colisao_Parede_Esquerda" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Parede_Esquerda"]
shape = SubResource( 7 )

[node name="Porta" type="Sprite" parent="."]
position = Vector2( 125, 580 )
scale = Vector2( 0.439024, 0.338061 )
texture = ExtResource( 15 )

[node name="Colisao_Parede_Direita" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Parede_Direita"]
position = Vector2( 1286, -3 )
shape = SubResource( 7 )

[node name="Colisao_Chao" type="StaticBody2D" parent="."]
position = Vector2( 1280, -3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisao_Chao"]
position = Vector2( -635, 667 )
shape = SubResource( 10 )

[node name="PauseMenu" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1270.0
margin_bottom = 650.0

[node name="PcRecepção" type="Sprite" parent="."]
position = Vector2( 885, 607 )
scale = Vector2( 0.206026, 0.209288 )
texture = ExtResource( 13 )

[node name="MesaRecepção" type="Sprite" parent="PcRecepção"]
position = Vector2( -232.98, 76.4495 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="MesaRecepção2" type="Sprite" parent="PcRecepção"]
position = Vector2( 237.834, 76.45 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="TravaPorta" type="Sprite" parent="PcRecepção"]
position = Vector2( -232.98, -105.119 )
scale = Vector2( 0.537911, 0.489034 )
texture = ExtResource( 19 )

[node name="PcRecepção2" type="Sprite" parent="."]
position = Vector2( 285, 154 )
scale = Vector2( 0.206026, 0.209288 )
texture = ExtResource( 13 )

[node name="MesaRecepção" type="Sprite" parent="PcRecepção2"]
position = Vector2( -232.98, 76.4495 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="MesaRecepção2" type="Sprite" parent="PcRecepção2"]
position = Vector2( 237.834, 76.45 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="TravaPorta" type="Sprite" parent="PcRecepção2"]
position = Vector2( -232.98, -105.119 )
scale = Vector2( 0.537911, 0.489034 )
texture = ExtResource( 19 )

[node name="PcRecepção3" type="Sprite" parent="."]
position = Vector2( 127, 157 )
scale = Vector2( 0.206026, 0.209288 )
texture = ExtResource( 13 )

[node name="MesaRecepção" type="Sprite" parent="PcRecepção3"]
position = Vector2( -232.98, 76.4495 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="MesaRecepção2" type="Sprite" parent="PcRecepção3"]
position = Vector2( 237.834, 76.45 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="TravaPorta" type="Sprite" parent="PcRecepção3"]
position = Vector2( -232.98, -105.119 )
scale = Vector2( 0.537911, 0.489034 )
texture = ExtResource( 19 )

[node name="PcRecepção4" type="Sprite" parent="."]
position = Vector2( 981, 283 )
scale = Vector2( 0.206026, 0.209288 )
texture = ExtResource( 13 )

[node name="MesaRecepção" type="Sprite" parent="PcRecepção4"]
position = Vector2( -232.98, 76.4495 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="MesaRecepção2" type="Sprite" parent="PcRecepção4"]
position = Vector2( 237.834, 76.45 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="TravaPorta" type="Sprite" parent="PcRecepção4"]
position = Vector2( -232.98, -105.119 )
scale = Vector2( 0.537911, 0.489034 )
texture = ExtResource( 19 )

[node name="PcRecepção5" type="Sprite" parent="."]
position = Vector2( 1188, 283 )
scale = Vector2( 0.206026, 0.209288 )
texture = ExtResource( 13 )

[node name="MesaRecepção" type="Sprite" parent="PcRecepção5"]
position = Vector2( -232.98, 76.4495 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="MesaRecepção2" type="Sprite" parent="PcRecepção5"]
position = Vector2( 237.834, 76.45 )
scale = Vector2( 0.939585, 0.830067 )
texture = ExtResource( 7 )

[node name="TravaPorta" type="Sprite" parent="PcRecepção5"]
position = Vector2( -232.98, -105.119 )
scale = Vector2( 0.537911, 0.489034 )
texture = ExtResource( 19 )

[node name="TravaPorta" type="Sprite" parent="."]
position = Vector2( 198, 514 )
scale = Vector2( 0.121134, 0.112416 )
texture = ExtResource( 19 )

[node name="Mapa" type="Sprite" parent="."]
position = Vector2( 473, 524 )
scale = Vector2( 0.194193, 0.197644 )
texture = ExtResource( 14 )

[node name="Tvteste1" type="AnimatedSprite" parent="."]
position = Vector2( 726, 524 )
scale = Vector2( 0.596939, 0.644 )
frames = SubResource( 11 )
frame = 2
speed_scale = 0.15
playing = true

[node name="Tvteste3" type="Sprite" parent="Tvteste1"]
position = Vector2( 514.29, -524.845 )
texture = ExtResource( 25 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 242, 572 )
scale = Vector2( 3, 3 )
frames = SubResource( 18 )
frame = 3
speed_scale = 0.3
playing = true

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 76, 636 )

[node name="Tvteste2" type="Sprite" parent="."]
position = Vector2( 385, 82 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 20 )

[node name="Janela" type="Sprite" parent="."]
position = Vector2( 308, 513 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="Janela2" type="Sprite" parent="."]
position = Vector2( 838, 198 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="Janela3" type="Sprite" parent="."]
position = Vector2( 199, 61 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="Janela4" type="Sprite" parent="."]
position = Vector2( 1255, 512 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="Area_Recepcionista" to="." method="_on_Area_Recepcionista_body_entered"]
[connection signal="body_exited" from="Area_Recepcionista" to="." method="_on_Area_Recepcionista_body_exited"]
